# unleash-client-haskell-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  default.nix  flake.nix  hie.yaml  nixpkgs.hash  nixpkgs.nix  shell.nix  unleash-client-haskell-core.cabal  update-nixpkgs.rb
example-client/: Main.hs
src/: Unleash.hs
src/Unleash/: HttpClient.hs
src/Unleash/Internal/: DomainTypes.hs  JsonTypes.hs  Predicates.hs
test/: Spec.hs  UnleashClientSpecificationRoundtripSpec.hs  UnleashHttpClientSpec.hs  UnleashSpecificationJsonTypes.hs  UnleashSpecificationSpec.hs  VersionSpec.hs
