cabal-version: 3.4

name: unleash-client-haskell-core
version: 0.8.1
description:
    This is a library for evaluating [Unleash](https://www.getunleash.io/) feature toggles.
    The 'Unleash' module provides functions and types for checking feature toggles and variants.
author: FINN.no
copyright: Copyright © FINN.no AS, Inc. All rights reserved.
extra-source-files:
    README.md

common all
    build-depends:
        base >=4.7 && <5,
        record-dot-preprocessor,
        record-hasfield
    default-extensions:
        BlockArguments
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
    ghc-options:
        -O2
        -W
        -Wno-unused-top-binds
        -Wredundant-constraints
        -Wunused-packages
        -F -pgmF=record-dot-preprocessor
    default-language: Haskell2010

library
    import: all
    exposed-modules:
        Unleash
        Unleash.Internal.DomainTypes
        Unleash.Internal.JsonTypes
        Unleash.Internal.Predicates
    hs-source-dirs: src
    build-depends:
        aeson,
        containers,
        murmur3,
        random,
        versions,
        text,
        text-show,
        time

test-suite unleash-client-haskell-core-test
    import: all
    ghc-options: -Wno-missing-home-modules
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        UnleashClientSpecificationRoundtripSpec
        UnleashSpecificationJsonTypes
        UnleashSpecificationSpec
    build-depends:
        unleash-client-haskell-core,
        aeson,
        aeson-pretty,
        attoparsec,
        bytestring,
        hspec,
        text
