cabal-version: 3.0

name: unleash-client-haskell-core
version: 0.8.9
synopsis: Unleash feature toggle client core
description:
    This is a library for evaluating [Unleash](https://www.getunleash.io/) feature toggles.
    The 'Unleash' module provides functions and types for checking feature toggles and variants.
category: Web
author: FINN.no
maintainer: See README.md
license: MIT
copyright: Copyright © FINN.no AS, Inc. All rights reserved.
extra-source-files:
    CHANGELOG.md
    README.md

common all
    build-depends:
        base >=4.7 && <5,
    default-extensions:
        BlockArguments
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        TypeApplications
    ghc-options:
        -haddock
        -W
        -Wno-unused-top-binds
        -Wredundant-constraints
        -Wunused-packages
    default-language: Haskell2010

library
    import: all
    exposed-modules:
        Unleash
        Unleash.Internal.DomainTypes
        Unleash.Internal.JsonTypes
        Unleash.Internal.Predicates
    hs-source-dirs: src
    build-depends:
        aeson >= 2.1.2 && < 2.2,
        containers >= 0.6.7 && < 0.7,
        murmur3 >= 1.0.5 && < 1.1,
        random >= 1.2.1 && < 1.3,
        text >= 2.0.2 && < 2.1,
        text-show >= 3.10.4 && < 3.11,
        time >= 1.12.2 && < 1.13,
        versions >= 6.0.1 && < 6.1,

test-suite unleash-client-haskell-core-test
    import: all
    ghc-options: -Wno-missing-home-modules
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        UnleashClientSpecificationRoundtripSpec
        UnleashSpecificationJsonTypes
        UnleashSpecificationSpec
    build-depends:
        aeson,
        aeson-pretty >= 0.8.9 && < 0.9,
        attoparsec >= 0.14.4 && < 0.15,
        bytestring >= 0.11.5 && < 0.12,
        hspec >= 2.10.10 && < 2.11,
        text,
        unleash-client-haskell-core,
