cabal-version:      3.0
name:               unleash-client-haskell-core
version:            0.12.0
synopsis:           Unleash feature toggle client core
description:
  This is a library for evaluating [Unleash](https://www.getunleash.io/) feature toggles.
  The 'Unleash' module provides functions and types for checking feature toggles and variants.

category:           Web
author:             FINN.no
homepage:           https://github.com/finn-no/unleash-client-haskell-core
maintainer:         See README.md
license:            MIT
copyright:          Copyright © FINN.no AS, Inc. All rights reserved.
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/finn-no/unleash-client-haskell-core

common all
  default-extensions:
    BlockArguments
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications

  ghc-options:
    -haddock -W -Wno-unused-top-binds -Wredundant-constraints
    -Wunused-packages

  default-language:   Haskell2010

library
  import:          all
  exposed-modules:
    Unleash
    Unleash.Internal.DomainTypes
    Unleash.Internal.JsonTypes
    Unleash.Internal.Predicates

  hs-source-dirs:  src
  build-depends:
    , aeson       >=2.0.3 && <2.3
    , base        >=4.7   && <5
    , containers  >=0.6.4 && <0.7
    , murmur3     >=1.0.5 && <1.1
    , random      >=1.2.1 && <1.3
    , text        >=1.2.5 && <2.2
    , text-show   >=3.9.7 && <3.12
    , time        >=1.9.3 && <1.13
    , versions    >=5.0.4 && <6.1

test-suite unleash-client-haskell-core-test
  import:         all
  ghc-options:    -Wno-missing-home-modules
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    UnleashClientSpecificationRoundtripSpec
    UnleashSpecificationJsonTypes
    UnleashSpecificationSpec

  build-depends:
    , aeson
    , aeson-pretty                 >=0.8.9   && <0.9
    , attoparsec                   >=0.14.4  && <0.15
    , base
    , bytestring                   >=0.10.12 && <0.12
    , hspec                        >=2.8.5   && <2.12
    , text
    , unleash-client-haskell-core
